@@ -133,6 +133,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	* Florin Dumitrescu (http://www.crystal-works.net/):
 		added "update score" in cocosLive
 		author of the sound engine: PASoundListener, PASoundMgr, PASoundSource
+	* fnkelton:
+		Performance improvements in ccpLineIntersect. Added ccpSegmentIntersect and ccpPointIntersect
 	* Fradj Johann:
 		patches for CocosNode
 		patches for Layer
