@@ -317,6 +317,18 @@ BOOL ccpLineIntersect(CGPoint p1, CGPoint p2,
 					  CGPoint p3, CGPoint p4,
 					  float *s, float *t);
 
+/*
+ ccpSegmentIntersect returns YES if Segment A-B intersects with segment C-D
+ @since v1.0.0
+ */
+BOOL ccpSegmentIntersect(CGPoint A, CGPoint B, CGPoint C, CGPoint D);
+
+/*
+ ccpIntersectPoint returns the intersection point of line A-B, C-D
+ @since v1.0.0
+ */
+CGPoint ccpIntersectPoint(CGPoint A, CGPoint B, CGPoint C, CGPoint D);
+
 #ifdef __cplusplus
 }
 #endif
