@@ -1,4 +1,6 @@
 version 1.0.0 -
+. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
+. [FIX] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
 . [FIX] cocosLive: fixed memory leak in ScoreServerPost
 . [FIX] Tests: Fixed memory leak in ParticleTest
 . [FIX] Tests: Fixed memory leak in cocosLiveTest
